lexer_parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSE
    RETURN
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> declaration
Rule 5     statement -> assignment
Rule 6     statement -> if_statement
Rule 7     declaration -> INT IDENTIFIER SEMICOLON
Rule 8     declaration -> FLOAT IDENTIFIER SEMICOLON
Rule 9     assignment -> IDENTIFIER ASSIGN expression SEMICOLON
Rule 10    if_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 11    expression -> expression PLUS expression
Rule 12    expression -> expression MINUS expression
Rule 13    expression -> expression TIMES expression
Rule 14    expression -> expression DIVIDE expression
Rule 15    expression -> expression GT expression
Rule 16    expression -> expression LT expression
Rule 17    expression -> expression GE expression
Rule 18    expression -> expression LE expression
Rule 19    expression -> expression EQ expression
Rule 20    expression -> expression NE expression
Rule 21    expression -> LPAREN expression RPAREN
Rule 22    expression -> NUMBER
Rule 23    expression -> IDENTIFIER

Terminals, with rules where they appear

ASSIGN               : 9
DIVIDE               : 14
ELSE                 : 
EQ                   : 19
FLOAT                : 8
GE                   : 17
GT                   : 15
IDENTIFIER           : 7 8 9 23
IF                   : 10
INT                  : 7
LBRACE               : 10
LE                   : 18
LPAREN               : 10 21
LT                   : 16
MINUS                : 12
NE                   : 20
NUMBER               : 22
PLUS                 : 11
RBRACE               : 10
RETURN               : 
RPAREN               : 10 21
SEMICOLON            : 7 8 9
TIMES                : 13
WHILE                : 
error                : 

Nonterminals, with rules where they appear

assignment           : 5
declaration          : 4
expression           : 9 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21
if_statement         : 6
program              : 0
statement            : 2 3
statement_list       : 1 2 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (7) declaration -> . INT IDENTIFIER SEMICOLON
    (8) declaration -> . FLOAT IDENTIFIER SEMICOLON
    (9) assignment -> . IDENTIFIER ASSIGN expression SEMICOLON
    (10) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE

    INT             shift and go to state 7
    FLOAT           shift and go to state 9
    IDENTIFIER      shift and go to state 8
    IF              shift and go to state 10

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    if_statement                   shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (7) declaration -> . INT IDENTIFIER SEMICOLON
    (8) declaration -> . FLOAT IDENTIFIER SEMICOLON
    (9) assignment -> . IDENTIFIER ASSIGN expression SEMICOLON
    (10) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE

    $end            reduce using rule 1 (program -> statement_list .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 9
    IDENTIFIER      shift and go to state 8
    IF              shift and go to state 10

    statement                      shift and go to state 11
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    if_statement                   shift and go to state 6

state 3

    (3) statement_list -> statement .

    INT             reduce using rule 3 (statement_list -> statement .)
    FLOAT           reduce using rule 3 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> declaration .

    INT             reduce using rule 4 (statement -> declaration .)
    FLOAT           reduce using rule 4 (statement -> declaration .)
    IDENTIFIER      reduce using rule 4 (statement -> declaration .)
    IF              reduce using rule 4 (statement -> declaration .)
    $end            reduce using rule 4 (statement -> declaration .)
    RBRACE          reduce using rule 4 (statement -> declaration .)


state 5

    (5) statement -> assignment .

    INT             reduce using rule 5 (statement -> assignment .)
    FLOAT           reduce using rule 5 (statement -> assignment .)
    IDENTIFIER      reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> if_statement .

    INT             reduce using rule 6 (statement -> if_statement .)
    FLOAT           reduce using rule 6 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 7

    (7) declaration -> INT . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 12


state 8

    (9) assignment -> IDENTIFIER . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 13


state 9

    (8) declaration -> FLOAT . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 14


state 10

    (10) if_statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 15


state 11

    (2) statement_list -> statement_list statement .

    INT             reduce using rule 2 (statement_list -> statement_list statement .)
    FLOAT           reduce using rule 2 (statement_list -> statement_list statement .)
    IDENTIFIER      reduce using rule 2 (statement_list -> statement_list statement .)
    IF              reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement_list statement .)


state 12

    (7) declaration -> INT IDENTIFIER . SEMICOLON

    SEMICOLON       shift and go to state 16


state 13

    (9) assignment -> IDENTIFIER ASSIGN . expression SEMICOLON
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression EQ expression
    (20) expression -> . expression NE expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NUMBER
    (23) expression -> . IDENTIFIER

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 17

    expression                     shift and go to state 18

state 14

    (8) declaration -> FLOAT IDENTIFIER . SEMICOLON

    SEMICOLON       shift and go to state 21


state 15

    (10) if_statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression EQ expression
    (20) expression -> . expression NE expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NUMBER
    (23) expression -> . IDENTIFIER

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 17

    expression                     shift and go to state 22

state 16

    (7) declaration -> INT IDENTIFIER SEMICOLON .

    INT             reduce using rule 7 (declaration -> INT IDENTIFIER SEMICOLON .)
    FLOAT           reduce using rule 7 (declaration -> INT IDENTIFIER SEMICOLON .)
    IDENTIFIER      reduce using rule 7 (declaration -> INT IDENTIFIER SEMICOLON .)
    IF              reduce using rule 7 (declaration -> INT IDENTIFIER SEMICOLON .)
    $end            reduce using rule 7 (declaration -> INT IDENTIFIER SEMICOLON .)
    RBRACE          reduce using rule 7 (declaration -> INT IDENTIFIER SEMICOLON .)


state 17

    (23) expression -> IDENTIFIER .

    SEMICOLON       reduce using rule 23 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 23 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 23 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 23 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 23 (expression -> IDENTIFIER .)
    GT              reduce using rule 23 (expression -> IDENTIFIER .)
    LT              reduce using rule 23 (expression -> IDENTIFIER .)
    GE              reduce using rule 23 (expression -> IDENTIFIER .)
    LE              reduce using rule 23 (expression -> IDENTIFIER .)
    EQ              reduce using rule 23 (expression -> IDENTIFIER .)
    NE              reduce using rule 23 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 23 (expression -> IDENTIFIER .)


state 18

    (9) assignment -> IDENTIFIER ASSIGN expression . SEMICOLON
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . DIVIDE expression
    (15) expression -> expression . GT expression
    (16) expression -> expression . LT expression
    (17) expression -> expression . GE expression
    (18) expression -> expression . LE expression
    (19) expression -> expression . EQ expression
    (20) expression -> expression . NE expression

    SEMICOLON       shift and go to state 23
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    GE              shift and go to state 30
    LE              shift and go to state 31
    EQ              shift and go to state 32
    NE              shift and go to state 33


state 19

    (21) expression -> LPAREN . expression RPAREN
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression EQ expression
    (20) expression -> . expression NE expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NUMBER
    (23) expression -> . IDENTIFIER

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 17

    expression                     shift and go to state 34

state 20

    (22) expression -> NUMBER .

    SEMICOLON       reduce using rule 22 (expression -> NUMBER .)
    PLUS            reduce using rule 22 (expression -> NUMBER .)
    MINUS           reduce using rule 22 (expression -> NUMBER .)
    TIMES           reduce using rule 22 (expression -> NUMBER .)
    DIVIDE          reduce using rule 22 (expression -> NUMBER .)
    GT              reduce using rule 22 (expression -> NUMBER .)
    LT              reduce using rule 22 (expression -> NUMBER .)
    GE              reduce using rule 22 (expression -> NUMBER .)
    LE              reduce using rule 22 (expression -> NUMBER .)
    EQ              reduce using rule 22 (expression -> NUMBER .)
    NE              reduce using rule 22 (expression -> NUMBER .)
    RPAREN          reduce using rule 22 (expression -> NUMBER .)


state 21

    (8) declaration -> FLOAT IDENTIFIER SEMICOLON .

    INT             reduce using rule 8 (declaration -> FLOAT IDENTIFIER SEMICOLON .)
    FLOAT           reduce using rule 8 (declaration -> FLOAT IDENTIFIER SEMICOLON .)
    IDENTIFIER      reduce using rule 8 (declaration -> FLOAT IDENTIFIER SEMICOLON .)
    IF              reduce using rule 8 (declaration -> FLOAT IDENTIFIER SEMICOLON .)
    $end            reduce using rule 8 (declaration -> FLOAT IDENTIFIER SEMICOLON .)
    RBRACE          reduce using rule 8 (declaration -> FLOAT IDENTIFIER SEMICOLON .)


state 22

    (10) if_statement -> IF LPAREN expression . RPAREN LBRACE statement_list RBRACE
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . DIVIDE expression
    (15) expression -> expression . GT expression
    (16) expression -> expression . LT expression
    (17) expression -> expression . GE expression
    (18) expression -> expression . LE expression
    (19) expression -> expression . EQ expression
    (20) expression -> expression . NE expression

    RPAREN          shift and go to state 35
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    GE              shift and go to state 30
    LE              shift and go to state 31
    EQ              shift and go to state 32
    NE              shift and go to state 33


state 23

    (9) assignment -> IDENTIFIER ASSIGN expression SEMICOLON .

    INT             reduce using rule 9 (assignment -> IDENTIFIER ASSIGN expression SEMICOLON .)
    FLOAT           reduce using rule 9 (assignment -> IDENTIFIER ASSIGN expression SEMICOLON .)
    IDENTIFIER      reduce using rule 9 (assignment -> IDENTIFIER ASSIGN expression SEMICOLON .)
    IF              reduce using rule 9 (assignment -> IDENTIFIER ASSIGN expression SEMICOLON .)
    $end            reduce using rule 9 (assignment -> IDENTIFIER ASSIGN expression SEMICOLON .)
    RBRACE          reduce using rule 9 (assignment -> IDENTIFIER ASSIGN expression SEMICOLON .)


state 24

    (11) expression -> expression PLUS . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression EQ expression
    (20) expression -> . expression NE expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NUMBER
    (23) expression -> . IDENTIFIER

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 17

    expression                     shift and go to state 36

state 25

    (12) expression -> expression MINUS . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression EQ expression
    (20) expression -> . expression NE expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NUMBER
    (23) expression -> . IDENTIFIER

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 17

    expression                     shift and go to state 37

state 26

    (13) expression -> expression TIMES . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression EQ expression
    (20) expression -> . expression NE expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NUMBER
    (23) expression -> . IDENTIFIER

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 17

    expression                     shift and go to state 38

state 27

    (14) expression -> expression DIVIDE . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression EQ expression
    (20) expression -> . expression NE expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NUMBER
    (23) expression -> . IDENTIFIER

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 17

    expression                     shift and go to state 39

state 28

    (15) expression -> expression GT . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression EQ expression
    (20) expression -> . expression NE expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NUMBER
    (23) expression -> . IDENTIFIER

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 17

    expression                     shift and go to state 40

state 29

    (16) expression -> expression LT . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression EQ expression
    (20) expression -> . expression NE expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NUMBER
    (23) expression -> . IDENTIFIER

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 17

    expression                     shift and go to state 41

state 30

    (17) expression -> expression GE . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression EQ expression
    (20) expression -> . expression NE expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NUMBER
    (23) expression -> . IDENTIFIER

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 17

    expression                     shift and go to state 42

state 31

    (18) expression -> expression LE . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression EQ expression
    (20) expression -> . expression NE expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NUMBER
    (23) expression -> . IDENTIFIER

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 17

    expression                     shift and go to state 43

state 32

    (19) expression -> expression EQ . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression EQ expression
    (20) expression -> . expression NE expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NUMBER
    (23) expression -> . IDENTIFIER

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 17

    expression                     shift and go to state 44

state 33

    (20) expression -> expression NE . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression GT expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression GE expression
    (18) expression -> . expression LE expression
    (19) expression -> . expression EQ expression
    (20) expression -> . expression NE expression
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . NUMBER
    (23) expression -> . IDENTIFIER

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 17

    expression                     shift and go to state 45

state 34

    (21) expression -> LPAREN expression . RPAREN
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . DIVIDE expression
    (15) expression -> expression . GT expression
    (16) expression -> expression . LT expression
    (17) expression -> expression . GE expression
    (18) expression -> expression . LE expression
    (19) expression -> expression . EQ expression
    (20) expression -> expression . NE expression

    RPAREN          shift and go to state 46
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    GE              shift and go to state 30
    LE              shift and go to state 31
    EQ              shift and go to state 32
    NE              shift and go to state 33


state 35

    (10) if_statement -> IF LPAREN expression RPAREN . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 47


state 36

    (11) expression -> expression PLUS expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . DIVIDE expression
    (15) expression -> expression . GT expression
    (16) expression -> expression . LT expression
    (17) expression -> expression . GE expression
    (18) expression -> expression . LE expression
    (19) expression -> expression . EQ expression
    (20) expression -> expression . NE expression

    SEMICOLON       reduce using rule 11 (expression -> expression PLUS expression .)
    PLUS            reduce using rule 11 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 11 (expression -> expression PLUS expression .)
    GT              reduce using rule 11 (expression -> expression PLUS expression .)
    LT              reduce using rule 11 (expression -> expression PLUS expression .)
    GE              reduce using rule 11 (expression -> expression PLUS expression .)
    LE              reduce using rule 11 (expression -> expression PLUS expression .)
    EQ              reduce using rule 11 (expression -> expression PLUS expression .)
    NE              reduce using rule 11 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 11 (expression -> expression PLUS expression .)
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27

  ! TIMES           [ reduce using rule 11 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 11 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 24 ]
  ! MINUS           [ shift and go to state 25 ]
  ! GT              [ shift and go to state 28 ]
  ! LT              [ shift and go to state 29 ]
  ! GE              [ shift and go to state 30 ]
  ! LE              [ shift and go to state 31 ]
  ! EQ              [ shift and go to state 32 ]
  ! NE              [ shift and go to state 33 ]


state 37

    (12) expression -> expression MINUS expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . DIVIDE expression
    (15) expression -> expression . GT expression
    (16) expression -> expression . LT expression
    (17) expression -> expression . GE expression
    (18) expression -> expression . LE expression
    (19) expression -> expression . EQ expression
    (20) expression -> expression . NE expression

    SEMICOLON       reduce using rule 12 (expression -> expression MINUS expression .)
    PLUS            reduce using rule 12 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 12 (expression -> expression MINUS expression .)
    GT              reduce using rule 12 (expression -> expression MINUS expression .)
    LT              reduce using rule 12 (expression -> expression MINUS expression .)
    GE              reduce using rule 12 (expression -> expression MINUS expression .)
    LE              reduce using rule 12 (expression -> expression MINUS expression .)
    EQ              reduce using rule 12 (expression -> expression MINUS expression .)
    NE              reduce using rule 12 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 12 (expression -> expression MINUS expression .)
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27

  ! TIMES           [ reduce using rule 12 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 12 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 24 ]
  ! MINUS           [ shift and go to state 25 ]
  ! GT              [ shift and go to state 28 ]
  ! LT              [ shift and go to state 29 ]
  ! GE              [ shift and go to state 30 ]
  ! LE              [ shift and go to state 31 ]
  ! EQ              [ shift and go to state 32 ]
  ! NE              [ shift and go to state 33 ]


state 38

    (13) expression -> expression TIMES expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . DIVIDE expression
    (15) expression -> expression . GT expression
    (16) expression -> expression . LT expression
    (17) expression -> expression . GE expression
    (18) expression -> expression . LE expression
    (19) expression -> expression . EQ expression
    (20) expression -> expression . NE expression

    SEMICOLON       reduce using rule 13 (expression -> expression TIMES expression .)
    PLUS            reduce using rule 13 (expression -> expression TIMES expression .)
    MINUS           reduce using rule 13 (expression -> expression TIMES expression .)
    TIMES           reduce using rule 13 (expression -> expression TIMES expression .)
    DIVIDE          reduce using rule 13 (expression -> expression TIMES expression .)
    GT              reduce using rule 13 (expression -> expression TIMES expression .)
    LT              reduce using rule 13 (expression -> expression TIMES expression .)
    GE              reduce using rule 13 (expression -> expression TIMES expression .)
    LE              reduce using rule 13 (expression -> expression TIMES expression .)
    EQ              reduce using rule 13 (expression -> expression TIMES expression .)
    NE              reduce using rule 13 (expression -> expression TIMES expression .)
    RPAREN          reduce using rule 13 (expression -> expression TIMES expression .)

  ! PLUS            [ shift and go to state 24 ]
  ! MINUS           [ shift and go to state 25 ]
  ! TIMES           [ shift and go to state 26 ]
  ! DIVIDE          [ shift and go to state 27 ]
  ! GT              [ shift and go to state 28 ]
  ! LT              [ shift and go to state 29 ]
  ! GE              [ shift and go to state 30 ]
  ! LE              [ shift and go to state 31 ]
  ! EQ              [ shift and go to state 32 ]
  ! NE              [ shift and go to state 33 ]


state 39

    (14) expression -> expression DIVIDE expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . DIVIDE expression
    (15) expression -> expression . GT expression
    (16) expression -> expression . LT expression
    (17) expression -> expression . GE expression
    (18) expression -> expression . LE expression
    (19) expression -> expression . EQ expression
    (20) expression -> expression . NE expression

    SEMICOLON       reduce using rule 14 (expression -> expression DIVIDE expression .)
    PLUS            reduce using rule 14 (expression -> expression DIVIDE expression .)
    MINUS           reduce using rule 14 (expression -> expression DIVIDE expression .)
    TIMES           reduce using rule 14 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 14 (expression -> expression DIVIDE expression .)
    GT              reduce using rule 14 (expression -> expression DIVIDE expression .)
    LT              reduce using rule 14 (expression -> expression DIVIDE expression .)
    GE              reduce using rule 14 (expression -> expression DIVIDE expression .)
    LE              reduce using rule 14 (expression -> expression DIVIDE expression .)
    EQ              reduce using rule 14 (expression -> expression DIVIDE expression .)
    NE              reduce using rule 14 (expression -> expression DIVIDE expression .)
    RPAREN          reduce using rule 14 (expression -> expression DIVIDE expression .)

  ! PLUS            [ shift and go to state 24 ]
  ! MINUS           [ shift and go to state 25 ]
  ! TIMES           [ shift and go to state 26 ]
  ! DIVIDE          [ shift and go to state 27 ]
  ! GT              [ shift and go to state 28 ]
  ! LT              [ shift and go to state 29 ]
  ! GE              [ shift and go to state 30 ]
  ! LE              [ shift and go to state 31 ]
  ! EQ              [ shift and go to state 32 ]
  ! NE              [ shift and go to state 33 ]


state 40

    (15) expression -> expression GT expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . DIVIDE expression
    (15) expression -> expression . GT expression
    (16) expression -> expression . LT expression
    (17) expression -> expression . GE expression
    (18) expression -> expression . LE expression
    (19) expression -> expression . EQ expression
    (20) expression -> expression . NE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NE resolved as shift
    SEMICOLON       reduce using rule 15 (expression -> expression GT expression .)
    RPAREN          reduce using rule 15 (expression -> expression GT expression .)
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    GE              shift and go to state 30
    LE              shift and go to state 31
    EQ              shift and go to state 32
    NE              shift and go to state 33
